Apply `@NotNull` annotations to `GenerateBtmTask` properties, streamline imports, replace verbose switch cases with enhanced switches, and improve method rule filtering logic.